--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Home Section -->
     <section id="home">
-        <h1>John Doe</h1>
+        <h1>Jay Kumar</h1>
         <p>Web Developer | Software Engineer | Designer</p>
     </section>
 
@@ -51,8 +51,8 @@
     <section id="education">
         <h2>Education</h2>
         <div class="school">
-            <h3>University Name</h3>
-            <p>Bachelor's Degree in Computer Science | Graduated: 2017</p>
+            <h3>Sarala Birla University</h3>
+            <p>Bachelor's Degree in Computer Science | Graduated: 2025</p>
         </div>
     </section>
 
@@ -72,8 +72,8 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Email: john.doe@example.com</p>
-        <p>Phone: (123) 456-7890</p>
+        <p>Email: jaykumar161103@gmail.com</p>
+        <p>Phone: 96085*****</p>
     </section>
 
     <!-- JavaScript -->
